objects/User.object
<CustomObject>
    <fields>
        <fullName>Broker_Role__c</fullName>
        <label>Broker Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Broker Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the temporary completion effort process</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivate_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked the user receives the Deactivate User process results via email.</inlineHelpText>
        <label>Deactivate Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Chatter_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked the user is not included in the Quality Center Chatter Group QA Process</inlineHelpText>
        <label>Exclude from Chatter QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facets_User_ID__c</fullName>
        <description>Stores the Facets user id. This is used by the Facets Integration when submitting case create/update requests</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Stores the Facets user id. This is used by the Facets Integration when submitting case create/update requests</inlineHelpText>
        <label>Facets User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Federation ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep_Number__c</fullName>
        <description>The Lead Rep Number will be populated for all Lead Reps as a 4 digit number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Rep Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the user is a Lead Rep this field should remain check-marked so that the user will be available for selection as a Lead Rep on the Opportunity record.</description>
        <inlineHelpText>If the user is a Lead Rep this field should remain check-marked so that the user will be available for selection as a Lead Rep on the Opportunity record.</inlineHelpText>
        <label>Lead Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <inlineHelpText>Select the SBU/Area the User resides in.</inlineHelpText>
        <label>License Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales Admin</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Small/Medium</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Underwriters-U/W</fullName>
                </value>
                <value>
                    <fullName>Small/Mid Community User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Auto_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the user should never be deactivated from an automated process.</inlineHelpText>
        <label>No Auto Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SM_Bypass_SM_Deprovision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked and the user is deactivated/de-provisioned, Sandbox Manager will not de-provision users in sandboxes.</description>
        <inlineHelpText>When checked and the user is deactivated/de-provisioned, Sandbox Manager will not de-provision users in sandboxes.</inlineHelpText>
        <label>Bypass SM Deprovision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Unique__c</fullName>
        <description>Field is used to generate unique user counts on various reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Unique</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>License__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>JIGSAW_PROSPECTING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>chatter</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_All_System_Administrator_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active All - System Administrator Users</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_System_Administrator_Custom</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator - Custom</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active System Administrator - Custom</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_System_Administrator_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active System Administrator Users</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_w_o_read_only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Read Only - Custom,System Administrator - Custom</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>SBU,Integration,ManagedServicesSupport - custom</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chatter</value>
        </filters>
        <label>Active w/o read only</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUserswithStorage</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>STORAGE_USED</columns>
        <filterScope>Everything</filterScope>
        <label>All Users with Storage</label>
    </listViews>
    <listViews>
        <fullName>All_Knowledge_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KNOWLEDGE_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Knowledge Users</label>
    </listViews>
    <listViews>
        <fullName>All_None_CareFirst_Emails</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>License__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>JIGSAW_PROSPECTING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notContain</operation>
            <value>carefirst</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <label>All None CareFirst Emails</label>
    </listViews>
    <listViews>
        <fullName>All_Users_LG_Appended</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Lead_Rep__c</columns>
        <columns>Lead_Rep_Number__c</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>.lg</value>
        </filters>
        <label>All Users - LG Appended</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chatter_Free_User_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chatter Free Users Active</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_com_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JIGSAW_PROSPECTING_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Data.com Users</label>
    </listViews>
    <listViews>
        <fullName>Federation_ID</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Federation ID Active Users</label>
    </listViews>
    <listViews>
        <fullName>Frozen</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>License__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>JIGSAW_PROSPECTING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>chatter</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen</label>
    </listViews>
    <listViews>
        <fullName>NCAS_User_Role_used_to_detect</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>NCAS/cfa</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NCAS User (Role used to detect)</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NCAS_User_email_used_to_detect</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>ncas.com</value>
        </filters>
        <label>NCAS User (email used to detect)</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
</CustomObject>